Neon lights edits

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -302,6 +302,7 @@ DecalActor=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,S
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path,StaticMesh.Collision.Collision
 MeshNaniteSettings=
 PostProcessVolume=PostProcessVolume.Lens.Lens
+BrushComponent=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Environment/neon_lights/Textures
@@ -1702,76 +1703,68 @@ GLTFProxyOptions="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/Environment/Bar_Assets/Models/SM_Lamp_01A.SM_Lamp_01A
-OpenAssetsAtExit=/Game/Bar_Assets/Materials/M_Light.M_Light
-OpenAssetsAtExit=/Game/Environment/neon_lights/Materials/7.7
-OpenAssetsAtExit=/Game/Environment/neon_lights/Materials/no_bloom.no_bloom
-OpenAssetsAtExit=/Game/Environment/neon_lights/Materials/bloom.bloom
-OpenAssetsAtExit=/Game/Environment/neon_lights/Models/Sloth_Sign_SLOTH.Sloth_Sign_SLOTH
-OpenAssetsAtExit=/Game/Environment/neon_lights/Textures/test_bloom.test_bloom
-OpenAssetsAtExit=/Game/Environment/neon_lights/Materials/envy_test.envy_test
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Bar_Assets/Materials/M_Light
-MRUItem1=/Game/Environment/Bar_Assets/Models/SM_Lamp_01A
-MRUItem2=/Game/Environment/neon_lights/Materials/7
-MRUItem3=/Game/Environment/neon_lights/Materials/no_bloom
-MRUItem4=/Game/Environment/neon_lights/Materials/bloom
-MRUItem5=/Game/Environment/neon_lights/Models/Sloth_Sign_SLOTH
-MRUItem6=/Game/Environment/neon_lights/Textures/test_bloom
-MRUItem7=/Game/Environment/neon_lights/Materials/envy_test
-MRUItem8=/Game/Environment/neon_lights/Textures/sins
-MRUItem9=/Game/Environment/neon_lights/Textures/spade
-MRUItem10=/Game/Environment/neon_lights/Materials/sins
-MRUItem11=/Game/Environment/FirstPerson/Maps/_GENERATED/ASUS/Combined_71F7FEF8
-MRUItem12=/Game/Environment/FirstPerson/Maps/_GENERATED/ASUS/Combined_8EACC693
-MRUItem13=/Game/Environment/neon_lights/Materials/spade
-MRUItem14=/Game/Environment/Bar_Assets/Materials/M_Basematerial
-MRUItem15=/Game/Environment/FirstPerson/Maps/_GENERATED/ASUS/Combined_5009208E
-MRUItem16=/Game/Environment/neon_lights/Textures/7
+MRUItem0=/Game/Environment/neon_lights/Materials/7
+MRUItem1=/Game/Environment/neon_lights/Textures/7_3
+MRUItem2=/Game/Environment/neon_lights/Materials/no_bloom1
+MRUItem3=/Game/Environment/neon_lights/Materials/bloom_3
+MRUItem4=/Game/Environment/neon_lights/Textures/sins1
+MRUItem5=/Game/Environment/neon_lights/Textures/sins
+MRUItem6=/Game/Environment/neon_lights/Materials/sins
+MRUItem7=/Game/Environment/neon_lights/Materials/no_bloom3
+MRUItem8=/Game/Environment/neon_lights/Materials/no_bloom2
+MRUItem9=/Game/Environment/neon_lights/Materials/no_bloom
+MRUItem10=/Game/Environment/neon_lights/Materials/bloom
+MRUItem11=/Game/Environment/neon_lights/Textures/7_2
+MRUItem12=/Game/Environment/neon_lights/Textures/7
+MRUItem13=/Game/Environment/neon_lights/Materials/bloom_2
+MRUItem14=/Game/Environment/neon_lights/Materials/bloom_1
+MRUItem15=/Game/Environment/Bar_Assets/Materials/MI_Prop_07
+MRUItem16=/Game/Environment/neon_lights/Textures/test_bloom
 MRUItem17=/Game/Environment/neon_lights/Textures/T_Prop_09_A
-MRUItem18=/Game/Environment/neon_lights/Models/7_Sins_Sign_S1
-MRUItem19=/Game/Environment/neon_lights/Models/7_Sins_Sign_N
-MRUItem20=/Game/Environment/neon_lights/Models/7_Sins_Sign_I_DOT
-MRUItem21=/Game/Environment/neon_lights/Models/7_Sins_Sign_S
-MRUItem22=/Game/Environment/neon_lights/Models/7_Sins_Sign_I
-MRUItem23=/Game/Environment/neon_lights/Models/Wrath_Sign
-MRUItem24=/Game/Environment/neon_lights/Models/Pride_Sign_PRIDE
-MRUItem25=/Game/Environment/neon_lights/Models/Merged_7Sins_Logo
-MRUItem26=/Game/Environment/neon_lights/Models/Lust_Sign_LUST
-MRUItem27=/Game/Environment/neon_lights/Models/Greed_Sign_GREED
-MRUItem28=/Game/Environment/neon_lights/Models/Gluttony_Sign_GLUTTONY
-MRUItem29=/Game/Environment/neon_lights/Models/Ghost_Sign_GHOST
+MRUItem18=/Game/Environment/neon_lights/Textures/spade1
+MRUItem19=/Game/Environment/neon_lights/Materials/spade
+MRUItem20=/Game/Environment/neon_lights/Textures/lust
+MRUItem21=/Game/Environment/neon_lights/Models/Wrath_Sign
+MRUItem22=/Game/Bar_Assets/Materials/M_Light
+MRUItem23=/Game/Environment/Bar_Assets/Models/SM_Lamp_01A
+MRUItem24=/Game/Environment/neon_lights/Models/Sloth_Sign_SLOTH
+MRUItem25=/Game/Environment/neon_lights/Textures/spade
+MRUItem26=/Game/Environment/FirstPerson/Maps/_GENERATED/ASUS/Combined_71F7FEF8
+MRUItem27=/Game/Environment/FirstPerson/Maps/_GENERATED/ASUS/Combined_8EACC693
+MRUItem28=/Game/Environment/Bar_Assets/Materials/M_Basematerial
+MRUItem29=/Game/Environment/FirstPerson/Maps/_GENERATED/ASUS/Combined_5009208E
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2802,6 +2795,11 @@ GLTFProxyOptions.Material=True
 /Game/Environment/neon_lights/Textures/spade.spade=1
 /Game/Environment/neon_lights/Textures/sins.sins=1
 /Game/Environment/Bar_Assets/Models/SM_Lamp_01A.SM_Lamp_01A=1
+/Game/Environment/neon_lights/Materials/bloom_1.bloom_1=1
+/Game/Environment/neon_lights/Textures/7_3.7_3=1
+/Game/Environment/neon_lights/Materials/no_bloom2.no_bloom2=1
+/Game/Environment/neon_lights/Materials/no_bloom1.no_bloom1=1
+/Game/Environment/neon_lights/Materials/sins.sins=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2867,9 +2865,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/Environment/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=116.000 Y=401.600
-WindowSize=X=1300.800 Y=740.800
-InitiallyMaximized=True
+ScreenPosition=X=52.800 Y=71.200
+WindowSize=X=1302.400 Y=742.400
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3255,7 +3253,7 @@ MapSkeletalMotionToRoot=False
 bExportLocalTime=True
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
@@ -3395,6 +3393,7 @@ GroupPaintBrushFilterProperties.Filters=True
 MeshElementsVisualizerProperties.MeshElementVisualization=True
 StaticMesh.LODCustomMode=True
 StaticMesh.StaticMesh=True
+Texture2D.Texture=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
