Darts Rules filled out.
Filled out dart rules.
Explained game modes, difficulties, busting, how to win.
How to actually play with pressing space to stop the sliders.
Order of sliders and what they represent.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -543,6 +543,7 @@ Doubt Correct_14=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.
 WBP_Rat_Screw_Rules_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.MediumCardValues,PropertyWrapper.DefaultValueCategory.Player -> Round Score,PropertyWrapper.DefaultValueCategory.Player Scores,PropertyWrapper.DefaultValueCategory.test,PropertyWrapper.DefaultValueCategory.Won Card -> Player,PropertyWrapper.DefaultValueCategory.Unique Card Triggers,PropertyWrapper.DefaultValueCategory.HighCardValues,PropertyWrapper.DefaultValueCategory.LowCardValues,PropertyWrapper.DefaultValueCategory.Songs,PropertyWrapper.DefaultValueCategory.Button Index -> Hovered Moving,PropertyWrapper.DefaultValueCategory.Button -> Hovered,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_CardPile_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableGet.DefaultValueCategory.Card Info,K2Node_VariableGet.DefaultValueCategory.Player Scores,K2Node_VariableGet.DefaultValueCategory.Playing Characters -> Can Play Round,K2Node_VariableGet.DefaultValueCategory.Game -> Difficulty,K2Node_VariableGet.DefaultValueCategory.Unique Card Triggers,K2Node_VariableGet.DefaultValueCategory.UniqueCardChance,K2Node_VariableGet.DefaultValueCategory.HighCardValues,K2Node_VariableGet.DefaultValueCategory.LowCardValues,K2Node_VariableGet.DefaultValueCategory.MediumCardValues,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Game -> Difficulty,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,TargetPoint.TransformCommon.Transform,TargetPoint.Physics.ConstraintsGroup,TargetPoint.Collision.Collision,WidgetComponent.Collision.Collision,WidgetComponent.Physics.ConstraintsGroup
 Show Rules Mini Game=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.MediumCardValues,PropertyWrapper.DefaultValueCategory.Player -> Round Score,PropertyWrapper.DefaultValueCategory.Player Scores,PropertyWrapper.DefaultValueCategory.test,PropertyWrapper.DefaultValueCategory.Won Card -> Player,PropertyWrapper.DefaultValueCategory.Unique Card Triggers,PropertyWrapper.DefaultValueCategory.HighCardValues,PropertyWrapper.DefaultValueCategory.LowCardValues,PropertyWrapper.DefaultValueCategory.Songs,PropertyWrapper.DefaultValueCategory.Button Index -> Hovered Moving,PropertyWrapper.DefaultValueCategory.Button -> Hovered,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_CardPile_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableGet.DefaultValueCategory.Card Info,K2Node_VariableGet.DefaultValueCategory.Player Scores,K2Node_VariableGet.DefaultValueCategory.Playing Characters -> Can Play Round,K2Node_VariableGet.DefaultValueCategory.Game -> Difficulty,K2Node_VariableGet.DefaultValueCategory.Unique Card Triggers,K2Node_VariableGet.DefaultValueCategory.UniqueCardChance,K2Node_VariableGet.DefaultValueCategory.HighCardValues,K2Node_VariableGet.DefaultValueCategory.LowCardValues,K2Node_VariableGet.DefaultValueCategory.MediumCardValues,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Game -> Difficulty,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,TargetPoint.TransformCommon.Transform,TargetPoint.Physics.ConstraintsGroup,TargetPoint.Collision.Collision,WidgetComponent.Collision.Collision,WidgetComponent.Physics.ConstraintsGroup
 Show Rules=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.MediumCardValues,PropertyWrapper.DefaultValueCategory.Player -> Round Score,PropertyWrapper.DefaultValueCategory.Player Scores,PropertyWrapper.DefaultValueCategory.test,PropertyWrapper.DefaultValueCategory.Won Card -> Player,PropertyWrapper.DefaultValueCategory.Unique Card Triggers,PropertyWrapper.DefaultValueCategory.HighCardValues,PropertyWrapper.DefaultValueCategory.LowCardValues,PropertyWrapper.DefaultValueCategory.Songs,PropertyWrapper.DefaultValueCategory.Button Index -> Hovered Moving,PropertyWrapper.DefaultValueCategory.Button -> Hovered,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_CardPile_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableGet.DefaultValueCategory.Card Info,K2Node_VariableGet.DefaultValueCategory.Player Scores,K2Node_VariableGet.DefaultValueCategory.Playing Characters -> Can Play Round,K2Node_VariableGet.DefaultValueCategory.Game -> Difficulty,K2Node_VariableGet.DefaultValueCategory.Unique Card Triggers,K2Node_VariableGet.DefaultValueCategory.UniqueCardChance,K2Node_VariableGet.DefaultValueCategory.HighCardValues,K2Node_VariableGet.DefaultValueCategory.LowCardValues,K2Node_VariableGet.DefaultValueCategory.MediumCardValues,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Game -> Difficulty,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,TargetPoint.TransformCommon.Transform,TargetPoint.Physics.ConstraintsGroup,TargetPoint.Collision.Collision,WidgetComponent.Collision.Collision,WidgetComponent.Physics.ConstraintsGroup
+WBP_Darts_Rules_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.MediumCardValues,PropertyWrapper.DefaultValueCategory.Player -> Round Score,PropertyWrapper.DefaultValueCategory.Player Scores,PropertyWrapper.DefaultValueCategory.test,PropertyWrapper.DefaultValueCategory.Won Card -> Player,PropertyWrapper.DefaultValueCategory.Unique Card Triggers,PropertyWrapper.DefaultValueCategory.HighCardValues,PropertyWrapper.DefaultValueCategory.LowCardValues,PropertyWrapper.DefaultValueCategory.Songs,PropertyWrapper.DefaultValueCategory.Button Index -> Hovered Moving,PropertyWrapper.DefaultValueCategory.Button -> Hovered,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_CardPile_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableGet.DefaultValueCategory.Card Info,K2Node_VariableGet.DefaultValueCategory.Player Scores,K2Node_VariableGet.DefaultValueCategory.Playing Characters -> Can Play Round,K2Node_VariableGet.DefaultValueCategory.Game -> Difficulty,K2Node_VariableGet.DefaultValueCategory.Unique Card Triggers,K2Node_VariableGet.DefaultValueCategory.UniqueCardChance,K2Node_VariableGet.DefaultValueCategory.HighCardValues,K2Node_VariableGet.DefaultValueCategory.LowCardValues,K2Node_VariableGet.DefaultValueCategory.MediumCardValues,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Game -> Difficulty,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,TargetPoint.TransformCommon.Transform,TargetPoint.Physics.ConstraintsGroup,TargetPoint.Collision.Collision,WidgetComponent.Collision.Collision,WidgetComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/NPCs/Decision_Making
@@ -551,7 +552,7 @@ ContentBrowserTab1.SelectedPaths=/Game/NPCs/Decision_Making
 ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.SelectedPaths=/Game/UI/Diegetic/Menus
 ContentBrowserTab1.SelectedPaths=/Game/NPCs/Decision_Making
-ContentBrowserTab1.SelectedPaths=/Game/Player/Input/IMC
+ContentBrowserTab1.SelectedPaths=/Game/UI/Non_Diegetic/Rules
 None=======
 None=======
 None=======
@@ -1704,7 +1705,7 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Render Transform.RenderTransform\" "
 SpringArmComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -2083,7 +2084,7 @@ WrapBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 FontFace="\"Object\" \"Object.FontFace\" \"Object.FontFace.SubFaces\" "
 BP_Card_Holo_Indicator_C=
 BP_CardPile_IDI_Doubted_C="\"Object\" \"Object.Actor.Tags\" "
-WBP_Darts_Rules_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
+WBP_Darts_Rules_C="\"Object\" "
 WBP_Pool_Rules_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorSubsystem]
@@ -2135,25 +2136,11 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules.WBP_Auction_Rules
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules.WBP_Rat_Screw_Rules
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder.WBP_Rules_Text_Holder
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
-OpenAssetsAtExit=/Game/Modes_Instances/Modes/GM_Bar.GM_Bar
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Rules/BP_Rules_Manager.BP_Rules_Manager
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
-OpenAssetsAtExit=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager
-OpenAssetsAtExit=/Game/Mini_Games/Darts/BP_Dart_Board.BP_Dart_Board
-OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Winner.WBP_Darts_Winner
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
-OpenAssetsAtExit=/Game/NPCs/BPI_NPC_Opponent.BPI_NPC_Opponent
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules.WBP_Darts_Rules
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
-MRUItem1=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem0=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem1=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
 MRUItem2=/Game/UI/Diegetic/Main_Games/WBP_Card_Counter
 MRUItem3=/Game/Player/Input/IMC/IMC_Darts
 MRUItem4=/Game/Player/BP_Player
@@ -4726,7 +4713,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=2237.000 Y=213.000
-ScreenPosition=X=40.000 Y=10.000
+ScreenPosition=X=1960.000 Y=10.000
 None=======
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
