--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2108,28 +2108,10 @@ None=======
 None=======
 None=======
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -2137,38 +2119,54 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules.WBP_Darts_Rules
-OpenAssetsAtExit=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder.WBP_Rules_Text_Holder
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules.WBP_Rat_Screw_Rules
+OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
-MRUItem1=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
-MRUItem2=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem3=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt
-MRUItem4=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem5=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
-MRUItem6=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
-MRUItem7=/Game/UI/Diegetic/Main_Games/WBP_Card_Counter
-MRUItem8=/Game/Player/Input/IMC/IMC_Darts
-MRUItem9=/Game/Player/BP_Player
-MRUItem10=/Game/NPCs/BPI_NPC_Opponent
-MRUItem11=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem12=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem13=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem14=/Game/NPCs/BP_NPC
-MRUItem15=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Start_Game
-MRUItem16=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Winner
-MRUItem17=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection
-MRUItem18=/Game/Mini_Games/Darts/BP_Dart_Board
-MRUItem19=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection
-MRUItem20=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem21=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem22=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem23=/Game/Shared_Game_Mechanics/Rules/BP_Rules_Manager
-MRUItem24=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem25=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
+MRUItem0=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem1=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
+MRUItem2=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
+MRUItem3=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
+MRUItem4=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem5=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt
+MRUItem6=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem7=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem8=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
+MRUItem9=/Game/UI/Diegetic/Main_Games/WBP_Card_Counter
+MRUItem10=/Game/Player/Input/IMC/IMC_Darts
+MRUItem11=/Game/Player/BP_Player
+MRUItem12=/Game/NPCs/BPI_NPC_Opponent
+MRUItem13=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem14=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
+MRUItem15=/Game/NPCs/BP_NPC
+MRUItem16=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Start_Game
+MRUItem17=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Winner
+MRUItem18=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection
+MRUItem19=/Game/Mini_Games/Darts/BP_Dart_Board
+MRUItem20=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection
+MRUItem21=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem22=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem23=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem24=/Game/Shared_Game_Mechanics/Rules/BP_Rules_Manager
+MRUItem25=/Game/Modes_Instances/Modes/GM_Bar
 MRUItem26=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
 MRUItem27=/Game/Player/Input/IMC/IMC_Rules
 MRUItem28=/Game/Shared_Game_Mechanics/Cards/BP_Card_Holo_Indicator
@@ -4648,7 +4646,7 @@ None=======
 /Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Start_Game.WBP_Darts_Start_Game=1
 /Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection.WBP_Darts_Mode_Selection=1
 /Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection.WBP_Darts_Difficulty_Selection=1
-/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules.WBP_Darts_Rules=1
+/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules.WBP_Darts_Rules=0
 /Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules.WBP_Pool_Rules=1
 /Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator.WBP_NPC_Game_Availability_Indicator=1
 
@@ -4717,7 +4715,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=2237.000 Y=213.000
-ScreenPosition=X=1960.000 Y=10.000
+ScreenPosition=X=40.000 Y=10.000
 None=======
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
