Jukebox widget update. Jukebox interaction fix.
Jukebox click widgets and general aesthetic fixes for the jukebox widget.
Jukebox interaction fix by changing the collision sphere on the jukebox to not be a jukebox object type so actually checking when looking at the jukebox instead of also "looking" at the collision sphere.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1726,7 +1726,7 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Render Transform.RenderTransform\" "
 None=======
 None=======
 None=======
@@ -1739,8 +1739,8 @@ None=======
 None=======
 None=======
 SpringArmComponent="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 CameraComponent="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
@@ -1749,7 +1749,7 @@ MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
@@ -1992,8 +1992,8 @@ BP_Rat_Screw_Game_Manager_C="\"Object\" "
 MegascansMaterialParentSettings="\"Object\" "
 W_Winner_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Render Transform.RenderTransform\" "
 StaticMesh="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
@@ -2016,8 +2016,8 @@ IDI Decide_3="\"Struct\" "
 WidgetComponent="\"Object\" "
 WidgetComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 WBP_FaceCardPlayed_C="\"Object\" "
@@ -2031,7 +2031,7 @@ PreviewMeshCollection="\"Object\" "
 SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
-Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 WBP_Current_Turn_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 WBP_Current_Round_Card_Value_C="\"Object\" "
 WBP_Player_Cards_Round_IDI_C="\"Object\" "
@@ -2152,6 +2152,7 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -2178,57 +2179,43 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Niagara
-RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Rules/BP_Rules_Manager.BP_Rules_Manager
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
-OpenAssetsAtExit=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action.WBP_Unique_Card_Action
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/BPI_Rules_Widgets.BPI_Rules_Widgets
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules.WBP_Auction_Rules
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules.WBP_I_Doubt_It_Rules
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules.WBP_Pool_Rules
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules.WBP_Rat_Screw_Rules
-OpenAssetsAtExit=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules.WBP_Darts_Rules
+OpenAssetsAtExit=/Game/Misc_Mechanics/Jukebox/BP_Jukebox.BP_Jukebox
+OpenAssetsAtExit=/Game/UI/Diegetic/Misc/WBP_Jukebox.WBP_Jukebox
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem1=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
-MRUItem2=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
-MRUItem3=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
-MRUItem4=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
-MRUItem5=/Game/UI/Non_Diegetic/Rules/BPI_Rules_Widgets
-MRUItem6=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
-MRUItem7=/Game/Shared_Game_Mechanics/Rules/BP_Rules_Manager
-MRUItem8=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem9=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem10=/Game/NPCs/BP_NPC
-MRUItem11=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem12=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem13=/Game/Player/BP_Player
-MRUItem14=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action
-MRUItem15=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem16=/Game/UI/Diegetic/Menus/BP_Main_Menu
-MRUItem17=/Game/SFX/Sound_Mixes/Enum_Sound_Classes
-MRUItem18=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu
-MRUItem19=/Game/UI/Diegetic/Menus/WBP_Options
-MRUItem20=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu
-MRUItem21=/Game/SFX/Music/BG/Current_Music/JAZZU1_Cue
-MRUItem22=/Engine/EngineSounds/Master
-MRUItem23=/Game/SFX/Music/BG/Current_Music/JAZZU1
-MRUItem24=/Game/SFX/Sound_Mixes/SCM_Master
-MRUItem25=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem26=/Game/VFX/Cat/NS_Cat_Popout
-MRUItem27=/Game/VFX/Cat/NS_Cat_Popin
-MRUItem28=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem29=/Game/Shared_Game_Mechanics/Cards/Card_Piles/BP_CardPile_IDI_Doubted
+MRUItem0=/Game/UI/Diegetic/Misc/WBP_Jukebox
+MRUItem1=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem2=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem3=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
+MRUItem4=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
+MRUItem5=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
+MRUItem6=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
+MRUItem7=/Game/UI/Non_Diegetic/Rules/BPI_Rules_Widgets
+MRUItem8=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem9=/Game/Shared_Game_Mechanics/Rules/BP_Rules_Manager
+MRUItem10=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem11=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem12=/Game/NPCs/BP_NPC
+MRUItem13=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem14=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem15=/Game/Player/BP_Player
+MRUItem16=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action
+MRUItem17=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem18=/Game/UI/Diegetic/Menus/BP_Main_Menu
+MRUItem19=/Game/SFX/Sound_Mixes/Enum_Sound_Classes
+MRUItem20=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu
+MRUItem21=/Game/UI/Diegetic/Menus/WBP_Options
+MRUItem22=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu
+MRUItem23=/Game/SFX/Music/BG/Current_Music/JAZZU1_Cue
+MRUItem24=/Engine/EngineSounds/Master
+MRUItem25=/Game/SFX/Music/BG/Current_Music/JAZZU1
+MRUItem26=/Game/SFX/Sound_Mixes/SCM_Master
+MRUItem27=/Game/VFX/Cat/NS_Cat_Popout
+MRUItem28=/Game/VFX/Cat/NS_Cat_Popin
+MRUItem29=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
